# swig-wallet

./: rust-toolchain.toml
assertions/: Cargo.toml
cli/: Cargo.toml
cli/src/: commands.rs  interactive.rs  main.rs
instructions/: Cargo.toml
interface/: Cargo.toml
interface/src/: lib.rs
program/: Cargo.toml
program/src/: lib.rs
program/tests/: action_tests.rs  action_v2_test.rs  all_but_manage_authority_test.rs  all_but_manage_authority_v2_test.rs  cpi_program_permission_test.rs  cpi_program_permission_v2_test.rs  create_session_test.rs  create_session_v2_test.rs  create_test.rs  create_v2_test.rs  migrate_to_wallet_address_test.rs  sign.rs  sign_performance_test.rs  sign_performance_v2_test.rs  sign_secp256k1.rs  sign_secp256k1_v2.rs  sign_secp256r1.rs  sign_secp256r1_v2.rs  sign_v2.rs  sol_destination_limit.rs  sol_destination_limit_v2.rs  sol_recurring_destination_limit.rs  sol_recurring_destination_limit_v2.rs  stake_account_test.rs  stake_account_test_v2.rs  sub_account_test.rs  transfer_assets_test.rs  webauthn_huffman_test.rs
program/tests/common/: mod.rs
rust-sdk/: Cargo.toml
rust-sdk/src/: wallet.rs
rust-sdk/src/tests/ix_builder/: destination_tests.rs  mod.rs  program_all_tests.rs  program_scope_tests.rs  secp256r1_tests.rs  sign_v1_tests.rs  sign_v2_tests.rs  sub_account_test.rs
rust-sdk/src/tests/wallet/: authority_tests.rs  destination_tests.rs  helper_tests.rs  program_all_tests.rs  secp256r1_test.rs  secp_tests.rs  sign_v1_tests.rs  sign_v2_tests.rs  sub_accounts_test.rs
state/: Cargo.toml
