[package]
name = "swig-assertions"
version.workspace = true
edition = "2021"
description = "Solana program assertion utilities"
license = "AGPL-3.0"
authors.workspace = true
documentation.workspace = true

[dependencies]
pinocchio = { version = "0.9.2" }
pinocchio-system = { version = "0.3" }
pinocchio-pubkey = { version = "0.3" }

[features]
default = []

[lints]
workspace = true
