[package]
name = "swig-interface"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
description = "Solana program for the Swig protocol"
publish = false
authors.workspace = true
documentation.workspace = true

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
solana-sdk = { version = "3.0.0" }
swig = { path = "../program", default-features = false, features = [
    "no-entrypoint",
] }
swig-compact-instructions = { path = "../instructions", default-features = false, features = [
    "client",
] }
swig-state = { path = "../state" }
anyhow = "1.0.75"
solana-secp256r1-program = "3.0.0"
solana-sdk-ids = "3.0.0"
