[package]
name = "swig-sdk"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
authors.workspace = true
documentation.workspace = true

[dependencies]
swig-interface = { path = "../interface" }
swig-state = { path = "../state" }

solana-program = "3.0"
solana-sdk = "3.0"
solana-address-lookup-table-interface = {version="3.0.0", features = ["serde"]}
solana-commitment-config = {version="3.0.0", features=["serde"]}
solana-system-interface = {version = "3.0.0", features = ["bincode"]}
solana-client = "3.0"
bs58 = "0.5.1"
hex = "0.4.3"
thiserror = "2.0.12"
anyhow = "1.0.75"
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-signer = { version = "1.1.1" }
alloy-signer-local = { version = "1.1.1" }
secp256k1 = "0.30.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-account-decoder-client-types = "3.0"

[dev-dependencies]
solana-sdk-ids = "3.0.0"
test-log = "0.2"
rand = "0.8"
litesvm = { version = "0.8.1" }
litesvm-token = "0.8.1"
openssl = "0.10"
solana-secp256r1-program = "3.0"

[features]
rust_sdk_test = []

[lints]
workspace = true
